     when browsing history. 

   * More efficient pull from Subversion branches, avoiding unnecessary 
     calculation of revision numbers. (Requires InterBranch patch to bzr)

   * More efficient pull from Subversion branches, by using the local 
     branch ancestry to find out tag revision ids rather than the remote 
	 Subversion branch.

   * Use VersionedFiles.insert_record_stream() rather than VersionedFiles.add_lines(), 
     should be slightly faster.

bzr-svn 0.5.0					2009-02-03

  BUG FIXES

   * Fixed two assertions that were always true. (#323305)

   * Fixed handling of round-tripped revisions in svn-upgrade. (#320113)

   * Fixed handling of password prompting with username specified. (#275953)

   * Use most appropriate mapping when setting tags for a branch. (#322856)

   * Fixed handling of branch roots moving. (#295416)

  FEATURES

   * Added "bzr check" on Subversion repositories that checks 
     bzr-svn metadata. (#320929)

   * Allow overriding over revision-properties on a per-branch basis. (#319819)

   * Added --idmap-file option to svn-upgrade. 

bzr-svn 0.5.0~rc2				2009-01-30

  BUG FIXES

   * Install subvertpy as separate module rather than as part of 
     bzrlib.plugins.svn. (#306145)

   * Fix some tests when running overall bzr testsuite. (#306158)

   * Handle duplicate forward slashes in the path part of a URL. 

   * Pass utf-8 connect string to sqlite3() connect function. (#262923)

   * Fix pushing to repositories not allowing the setting of revision 
     properties.

   * Deal with newly appearing file ids correctly in dpush(). (#300979)

   * Fix handling of custom layouts, which used unicode internally. (#306629)

   * Fix pointless commits when using roundtripping using revision 
     properties. (#299943)

   * Make sure branches are properly removed in iter_all_changes(). 
     (#306288, #300006)

   * Handle pushing empty branches using dpush. (#311613)
